2003-08-28  Mark Grondona <mgrondona@llnl.gov>

        * : Reorganized pdsh code and changed sources accordingly.

        * src/qsnet/qshd_common.h, src/qsnet/qshd_common.c: 
	Renamed to qshell.[ch], changed	main_common() to qshell() and 
	removed references to ``doit.''

	* src/modules/mcmd.c (mcmd) src/modules/mqcmd.c (mqcmd): 
	Incorporated Al Chu's patch to fix potential error message
	inconsistencies due to a close call before an errno check. 

	* : Tagged pdsh-2-0-0-pre5 for testing.

2003-08-19  Albert Chu  <chu11@llnl.gov>

	* mqshd.c (check_interfaces): Skip localhost IP address (127.0.0.1).

2003-08-12  Albert Chu  <chu11@llnl.gov> 

	* qshd_common.h, qshd_common.c: New Files.

	* qshd.c, mqshd.c: Moved common code into qshd_common.c.

	* ChangeLog: Slightly reformatted ChangeLog to conform to GNU
	standards.  Older entries will still contain their old format.

2003-08-07  Albert Chu  <chu11@llnl.gov>
	* mqshd daemon now properly uses remote hostname with PAM
	* Tagged pdsh-2-0-0-pre4
	
2003-08-04  Albert Chu  <chu11@llnl.gov>
	* Re-worked mcmd/mqcmd to handle stderr & stdout in one stream
	* Tagged pdsh-2-0-0-pre3
	
2003-07-21  Albert Chu  <chu11@llnl.gov>
	* Fixed typos in manpages.
	* Enabled PAM support in qshell & mqshell daemons
	* Updated configuration to output warning/notice
	  messages if particular modules cannot be built.
	* Tagged pdsh-2-0-0-pre2
	
2003-07-16  Albert Chu  <chu11@llnl.gov>
        * Fixed additional issues with command line options and modules
	  recognized (or not-recognized) between pdsh and pdcp.
	* Removed dependence of rcp command from pdcp.  All functionality
	  of the rcp command is now coded internaly within pdcp.  
	* Eliminated several bugs from original rcp code.
	* Fixed several pdcp bugs related to -r option.
	* Fixed pdcp access/modification time errors with -p option.
	* Updated pdcp manpage to be clearer about pdcp functionality.
	* "bsd" rcmd renamed to "rsh" rcmd 